# triton_distributed

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  ATTRIBUTIONS.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Dockerfile.cai  README.md  deny.toml  docker-compose.yml  pyproject.toml  triton.code-workspace
applications/llm/count/: Cargo.toml  README.md
applications/llm/count/src/: lib.rs  main.rs
applications/llm/count/visualization/: README.md  docker-compose.yml  grafana-dashboard-providers.yml  grafana-datasources.yml  grafana.json  prometheus.yml  run.sh
compoundai/: .gitignore  .gitlab-ci.yml  Earthfile  README.md  pyproject.toml  scratch.md
compoundai/deploy/compoundai/api-server/: .air.toml  .gitlab-ci.yml  .gitrepo  Dockerfile  Earthfile  README.md  docker-compose.yaml  go.mod  go.sum
compoundai/deploy/compoundai/api-server/api/: main.go
compoundai/deploy/compoundai/api-server/helm/: Chart.yaml  values.yaml
compoundai/deploy/compoundai/operator/: .golangci.yml  Earthfile  Makefile  PROJECT  README.md  go.mod  go.sum
compoundai/deploy/compoundai/operator/cmd/: main.go
compoundai/deploy/compoundai/sdk/: pyproject.toml
compoundai/deploy/compoundai/sdk/tests/: basic.py
compoundai/examples/basic_service/: README.md  basic.py  bentofile.yaml  service.py  setup.sh
compoundai/src/compoundai/: __init__.py
compoundai/src/compoundai/cli/: cli.py  serve.py  serve_nova.py  serving.py
compoundai/src/compoundai/sdk/: decorators.py  dependency.py  image.py  service.py
compoundai/tests/: basic.py
examples/rust/http/: Cargo.toml
examples/rust/http/src/: main.rs
examples/rust/llmctl/: Cargo.toml
examples/rust/llmctl/src/: main.rs
examples/rust/service_metrics/: Cargo.toml  README.md
examples/rust/service_metrics/src/: lib.rs
lib/bindings/python/: Cargo.toml  README.md  pyproject.toml  test.py
lib/bindings/python/examples/bls/: bar.py  bls.py  foo.py
lib/bindings/python/examples/error_handling/: client.py  server.py
lib/bindings/python/examples/hello_world/: client.py  server.py
lib/bindings/python/examples/pipeline/: backend.py  frontend.py  middle.py  pipeline.py
lib/bindings/python/examples/typed/: client.py  server.py
lib/bindings/python/rust/: http.rs  lib.rs  llm.rs
lib/bindings/python/rust/llm/: backend.rs  disagg_router.rs  events.rs  kv.rs  model_card.rs  preprocessor.rs
lib/bindings/python/src/triton_distributed/: _core.pyi
lib/bindings/python/tests/: etcd-test.py  test_etcd_bindings.py
lib/runtime/: Cargo.toml  README.md
lib/runtime/bindings/python/: pyproject.toml
lib/runtime/bindings/python/rust/: Cargo.toml
lib/runtime/examples/python/bls/: bar.py  bls.py  foo.py
lib/runtime/src/: component.rs  protocols.rs  service.rs  transports.rs
lib/runtime/src/component/: client.rs  endpoint.rs  function.rs  namespace.rs  registry.rs  service.rs
lib/runtime/src/pipeline/: network.rs
lib/runtime/src/transports/: etcd.rs  zmq.rs
lib/runtime/src/transports/zmq/: bridge.rs  endpoint.rs  proxy.rs
lib/runtime/src/utils/: stream.rs
llm/rust/triton-llm/: Cargo.toml  README.md
llm/rust/triton-llm/src/: backend.rs  common.rs  disagg_router.rs  http.rs  kv_router.rs  lib.rs  model_card.rs  model_type.rs  preprocessor.rs  protocols.rs  tokenizers.rs  types.rs
llm/rust/triton-llm/src/common/: slug.rs
llm/rust/triton-llm/src/engines/: mistralrs.rs
llm/rust/triton-llm/src/http/: service.rs
llm/rust/triton-llm/src/kv_router/: indexer.rs  protocols.rs  publisher.rs  scheduler.rs  worker.rs
llm/rust/triton-llm/src/model_card/: create.rs  model.rs
llm/rust/triton-llm/src/preprocessor/: prompt.rs  tools.rs
llm/rust/triton-llm/src/protocols/: codec.rs  common.rs  openai.rs
llm/rust/triton-llm/src/tokenizers/: README.md  sp.rs
llm/rust/triton-llm/tests/: aggregators.rs  http-service.rs  model_card.rs  openai_completions.rs  preprocessor.rs  tokenizers.rs
nova/: README.md  pyproject.toml
nova/src/nova/backends/: README.md
nova/src/nova/cli/: main.py  serve.py
nova/src/nova/core/: README.md  endpoint.py  graph.py  models.py  service.py
runtime/: README.md  download_wheel.sh  pyproject.toml
runtime/python/: pyproject.toml
runtime/python/examples/echo/: client.py  protocol.py  server.py
runtime/rust/: ATTRIBUTIONS-Rust.md  Cargo.toml  README.md  deny.toml  docker-compose.yml
runtime/rust/examples/hello_world/: Cargo.toml
runtime/rust/libs/macros/: Cargo.toml
runtime/rust/libtriton_llm/: Cargo.toml  cbindgen.toml
runtime/rust/libtriton_llm/src/: lib.rs
runtime/rust/python-wheel/: .gitignore  Cargo.toml  README.md  pyproject.toml
runtime/rust/python-wheel/examples/: README.md
runtime/rust/python-wheel/rust/: engine.rs  lib.rs
runtime/rust/python-wheel/tests/: README.md  soak.py  soak_client.py  soak_client_2.py  soak_client_python_native.py  soak_client_python_native_mp.py  soak_server.py  soak_server_2.py  soak_server_python_native.py
runtime/rust/src/: actions.rs  component.rs  config.rs  discovery.rs  distributed.rs  icp.rs  kv_router.rs  lib.rs  protocols.rs  runtime.rs  service.rs  utils.rs  worker.rs
runtime/rust/src/component/: client.rs  endpoint.rs  namespace.rs  service.rs
runtime/rust/src/icp/: events.rs
runtime/rust/src/kv_router/: indexer.rs  publisher.rs  scheduler.rs
runtime/rust/src/pipeline/: context.rs  error.rs  network.rs  nodes.rs
runtime/rust/src/transports/: etcd.rs  nats.rs  zmq.rs
runtime/rust/src/utils/: stream.rs
runtime/rust/tests/: soak.rs
runtime/tests/python/: conftest.py
runtime/tests/python/integration/: test_add_multiply_divide.py  test_consolidated_logging.py  test_direct.py  test_mock_disaggregated_serving.py  test_perf_benchmark.py
runtime/tests/python/unit/: test_args.py
rust/triton-distributed/: Cargo.toml
rust/triton-distributed/src/: component.rs  engine.rs  pipeline.rs  service.rs
rust/triton-distributed/src/pipeline/: error.rs
rust/triton-distributed/src/transports/: etcd.rs  nats.rs
rust/triton-distributed/tests/: pipeline.rs
rust/triton-distributed/tests/common/: mock.rs
(+770 files in other folders)
