[workspace]
members = ["rust/*"]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2021"
authors = ["NVIDIA"]
homepage = "https://github.com/triton-inference-server/triton_distributed"


[workspace.dependencies]
log = "0.4"
anyhow = { version = "1" }
async-nats = { version = "0.38", features = ["service"] }
async-stream = { version = "0.3" }
async-trait = { version = "0.1" }
blake3 = "1"
bytes = "1"
derive_builder = "0.20"
derive-getters = "0.5"
either = { version = "1.13", features = ["serde"] }
figment = { version = "0.10.19", features = ["env", "json", "toml", "test"] }
futures = { version = "0.3" }
once_cell = "1"
prometheus = { version = "0.13" }
regex = { version = "1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = { version = "1" }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1" }
tokio-util = { version = "0.7", features = ["codec", "net"] }
tracing = { version = "0.1" }
uuid = { version = "1", features = ["v4", "serde"] }
validator = { version = "0.19", features = ["derive"] }
xxhash-rust = { version = "0.8", features = ["xxh3", "const_xxh3"] }


# python
pyo3 = { version = "0.23.3", default-features = false, features = [
  "macros",
  "experimental-async",
  "experimental-inspect",
  "py-clone",
] }
pyo3-async-runtimes = { version = "0.23.0", default-features = false, features = [
  "attributes",
  "testing",
  "tokio-runtime",
  "unstable-streams",
] }
pythonize = { version = "0.23" }
