# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[workspace]
members = [
    "lib/runtime",
    "lib/llm",
    "lib/bindings/python",
    "lib/bindings/c",
    "applications/llm/tio",
    "applications/llm/count",
    "examples/rust/hello_world",
    "examples/rust/http",
    "examples/rust/llmctl",
    "examples/rust/service_metrics",
]
resolver = "2"

[workspace.package]
version = "0.2.1"
edition = "2021"
authors = ["NVIDIA"]
license = "Apache-2.0"
homepage = "https://github.com/triton-inference-server/triton_distributed"
repository = "https://github.com/triton-inference-server/triton_distributed"

[workspace.dependencies]
# Local crates
triton-distributed-runtime = { path = "lib/runtime" }
triton-distributed-llm = { path = "lib/llm" }

# Common dependencies
anyhow = "1"
async-stream = "0.3"
async-trait = "0.1"
bytes = "1"
derive_builder = "0.20"
futures = "0.3"
futures-util = "0.3"
once_cell = "1.20.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
validator = { version = "0.20", features = ["derive"] }
xxhash-rust = { version = "0.8", features = ["xxh3", "const_xxh3"] }
blake3 = "1"
regex = "1"
chrono = { version = "0.4", default-features = false, features = ["alloc", "std", "clock", "now", "serde"] }
prometheus = { version = "0.13" }
