[project]
name = "compoundai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mabdulwahhab", email = "mabdulwahhab@nvidia.com" }
]
requires-python = "==3.10.*"
dependencies = [
    "bentoml>=1.3.22",
]

[project.scripts]
compoundai = "compoundai.cli.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
