# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "triton-distributed-runtime"
description = "Distributed Inference Framework"
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["llm", "genai", "inference", "nvidia", "distributed", "triton"]

[features]
default = []
integration = []

[dependencies]
# workspace dependencies
anyhow.workspace = true
async-stream.workspace = true
async-trait.workspace = true
bytes.workspace = true
derive_builder.workspace = true
futures.workspace = true
once_cell.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
validator.workspace = true
xxhash-rust.workspace = true
blake3.workspace = true
regex.workspace = true
chrono.workspace = true
prometheus.workspace = true

# dependencies with specific versions
async-nats = { version = "0.38", features = ["service"] }
async_zmq = "0.4.0"
derive-getters = "0.5"
either = { version = "1.13", features = ["serde"] }
figment = { version = "0.10.19", features = ["env", "json", "toml", "test"] }
humantime = "2.1.0"
log = "0.4"
socket2 = "0.5.8"
async-once-cell = "0.5.4"
educe = "0.6.0"
etcd-client = "0.14"
local-ip-address = "0.6.3"
nid = { version = "3.0.0", features = ["serde"] }
nix = { version = "0.29", features = ["signal"] }
nuid = "0.5"
rand = "0.8"

[dev-dependencies]
assert_matches = "1.5.0"
env_logger = "0.11"
rstest = "0.23.0"
temp-env = "0.3.6"
