[package]
name = "triton-distributed"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
anyhow = { workspace = true }
async-nats = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
blake3 = { workspace = true }
bytes = { workspace = true }
derive_builder = { workspace = true }
derive-getters = { workspace = true }
either = { workspace = true }
figment = { workspace = true }
futures = { workspace = true }
once_cell = { workspace = true }
prometheus = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }
xxhash-rust = { workspace = true }

# non-workspace
async-once-cell = "0.5.4"
educe = "0.6.0"
etcd-client = "0.14"
local-ip-address = { version = "0.6.3" }
nid = { version = "3.0.0", features = ["serde"] }
nix = { version = "0.29", features = ["signal"] }
nuid = { version = "0.5" }
rand = { version = "0.8"}

[dev-dependencies]
assert_matches = "1.5.0"
