[package]
name = "count"
version = "0.1.0"
edition = "2021"

[dependencies]
# local
triton-distributed = { path = "../../../runtime/rust" }
triton-llm = { path = "../../../llm/rust/triton-llm" }

# workspace - todo

# crates.io
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1" }
