[package]
name = "http"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
triton-distributed = { workspace = true}
triton-llm = { workspace = true}

env_logger = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
