[package]
name = "llmctl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
triton-distributed = { workspace = true}
triton-llm = { workspace = true}

serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

clap = { version = "4.5", features = ["derive"] }
tabled = "0.18"
