[package]
name = "service_metrics"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
triton-distributed = { workspace = true }

# third-party
futures = { workspace = true }
tokio = { workspace = true }
