[project]
name = "nova-distributed"
version = "0.1.1"
description = "Distributed LLM Framework"
# readme = "README.md"
authors = [
    { name = "Ryan Olson", email = "rolson@nvidia.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.10.6",
    "uvloop>=0.21.0",
]

# [project.scripts]
# nova-distributed = "nova_distributed:main"

[tool.maturin]
module-name = "nova_distributed._core"
python-packages = ["nova_distributed"]
python-source = "python"

[build-system]
requires = ["maturin>=1.0,<2.0", "patchelf"]
build-backend = "maturin"
