[project]
name = "nova-distributed"
version = "0.1.1"
description = "Distributed LLM Framework"
# readme = "README.md"
authors = [
    { name = "Ryan Olson", email = "rolson@nvidia.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.10.6",
    "uvloop>=0.21.0",
]

# [project.scripts]
# nova-distributed = "nova_distributed:main"

[tool.maturin]
module-name = "nova_distributed._core"
python-packages = ["nova_distributed"]
python-source = "python"

[build-system]
requires = ["maturin>=1.0,<2.0", "patchelf"]
build-backend = "maturin"

[tool.codespell]
# note: pre-commit passes explicit lists of files here, which this skip file list doesn't override -
# this is only to allow you to run codespell interactively
# this also overrides the grpc_generated folder, since it is generated

# TODO add skip files for generated code
# skip = "./.git,./.github,./src/grpc_generated"
skip = "./.git,./.github"

# ignore short words, and typename parameters like OffsetT
ignore-regex = "\\b(.{1,4}|[A-Z]\\w*T)\\b"
# ignore allowed words
# ignoring atleast to avoid testing::AtLeast from getting flagged
ignore-words-list = "atleast"
# use the 'clear' dictionary for unambiguous spelling mistakes
builtin = "clear"
# disable warnings about binary files and wrong encoding
quiet-level = 3

[tool.isort]
profile = "black"
use_parentheses = true
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
ensure_newline_before_comments = true
line_length = 88
balanced_wrapping = true
indent = "    "
